--- a/Localisation/JA.json
+++ b/Localisation/JA.json
@@ -1,115 +1,1 @@
-{
-    "TranslationsData": {
-        " (elite max)": "（エリートMAX）",
-        " (unrestored)": "（未修復）",
-        " records": " レコード",
-        " sec": " 秒",
-        "...": "...",
-        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> - 大容量ダウンロード",
-        "ABOUT": "概要",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - インフラストラクチャーおよびビルドアプリケーション\nNitro4CSR - リソース管理とコミュニティデータ統合\nFREYCKSSON - リソース更新\nMAINTAINERS - コミュニティデータの作成と更新\n\n発行元: ムRimgine Entertainment\n\n連絡先メール: csr2hub.service@gmail.com",
-        "AUDIO": "オーディオ",
-        "AUTOSHOW": "オートショー",
-        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "オートショー<color=#FFD540>PRO</color>モード（技術情報）",
-        "Agree": "同意する",
-        "All the best races of the racers are here! Let's see this hall of fame": "最高のレーサーたちのレースがここに！殿堂を見てみよう！",
-        "And finally, click to see additional information about the car": "最後に、車の詳細情報を見るにはクリックしてください",
-        "Avatar": "アバター",
-        "BACK": "戻る",
-        "BEST DRIVER!": "ベストドライバー！",
-        "BEST:": "ベスト：",
-        "BOSS CAR": "ボスカー",
-        "Basic specs and the car rating of the tier": "基本スペックとティア別の車両評価",
-        "Best result and racer. Click to watch the best shift video!": "ベスト結果とレーサー。ベストシフト動画を見るにはクリック！",
-        "Boss time: ": "ボスタイム：",
-        "CAR INFO (from Vision spreadsheet)": "車両情報（ビジョンスプレッドシート）",
-        "CONFIRM CHANGES": "変更を確定",
-        "CONNECTION FAILED": "接続失敗",
-        "CREATORS": "クリエイター",
-        "CREDITS": "クレジット",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUBはデータのダウンロードが必要です：<color= #FFAA0D>{0}</color>。通信制限がないことを確認し、ダウンロードを承認してください",
-        "Car name": "車名",
-        "Check out the cost of each part, and the effects of Stage 6 upgrades": "各パーツのコストとステージ6アップグレードの効果を確認！",
-        "City camera speed": "都市カメラ速度",
-        "Click here to change the leaderboard!": "リーダーボードを変更するにはここをクリック！",
-        "Click to change car type!": "車種を変更するにはクリック！",
-        "DYNO:": "ダイノ：",
-        "Download failed, check your internet connection and restart the app": "ダウンロード失敗。接続を確認し、アプリを再起動してください",
-        "Driver": "ドライバー",
-        "ELITE MAX": "エリートMAX",
-        "ELITE STOCK": "エリートストック",
-        "EXIT": "終了",
-        "Effects volume": "効果音音量",
-        "Enable localisation": "ローカライズを有効化",
-        "FAVORITEs": "お気に入り",
-        "FINAL DRIVE": "ファイナルドライブ",
-        "FPS limiter": "FPSリミッター",
-        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "最速プレイヤーとその車両を確認できます！一緒に見に行きましょう！",
-        "Find out how many elite components you need to fully upgrade your car!": "車を完全に強化するためのエリートコンポーネント数を確認！",
-        "GRAPHICS": "グラフィックス",
-        "Gacha imports": "ガチャ輸入",
-        "Get update!": "更新を取得！",
-        "Get updated information on how many Legends components you need to restore your car!": "車を修復するためのレジェンドコンポーネント数を最新情報で確認！",
-        "Graphics quality": "グラフィック品質",
-        "I know it already": "既に知っています",
-        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "正常動作のため追加データが必要です。接続を確認し再試行してください",
-        "Initializing database...": "データベースを初期化中...",
-        "LOADING SCREEN": "ローディング画面",
-        "Let's choose the unrestored version": "未修復バージョンを選択",
-        "Let's go!": "レッツゴー！",
-        "Let's look at LEGENDS": "レジェンドを見よう",
-        "Let's look at this car": "この車を見てみよう",
-        "MILESTONE SEASON CAR": "マイルストーンシーズンカー",
-        "Music clip": "音楽クリップ",
-        "Music volume": "音楽音量",
-        "NEW": "新着",
-        "NITROUS OXIDE": "亜酸化窒素",
-        "Number of upgrades and fusion parts": "アップグレード数と融合パーツ",
-        "OFF": "オフ",
-        "ON": "オン",
-        "OPEN CONFIGURATOR": "コンフィギュレーターを開く",
-        "OTHERS": "その他",
-        "Petrol or electric car": "ガソリン車または電気自動車",
-        "Preparing the city...": "都市を準備中...",
-        "Price of full car upgrades": "車両完全アップグレード費用",
-        "Price of the car:": "車両価格：",
-        "Quit": "終了",
-        "RARE IMPORTS": "レア輸入車",
-        "RELEASE iNFO": "リリース情報",
-        "Rarity": "レアリティ",
-        "Records": "記録",
-        "Reset": "リセット",
-        "Restart": "再起動",
-        "SEASON CARS": "シーズンカー",
-        "SETTINGS": "設定",
-        "Save": "保存",
-        "Some settings have been changed, save changes?": "設定が変更されました。保存しますか？",
-        "Start": "開始",
-        "TIRE PRESSURE": "タイヤ圧",
-        "There's finally an AUTOSHOW in the city, let me show you around?": "ついに都市にオートショーが登場！案内しましょうか？",
-        "This car can be obtained by defeating the boss": "この車はボスを倒すと入手可能",
-        "This car cannot be obtained anywhere": "この車はどこでも入手不可",
-        "This car is a part of a collection and can be purchased with collection credits.": "この車はコレクションの一部で、コレクションクレジットで購入可能",
-        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "こちらがオートショー！全車両の情報が集結！見てみよう",
-        "This is the podium, the best cars and drivers show off here": "こちらが表彰台。最高の車とドライバーがここに集結",
-        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "このプロジェクトはゲーム情報を自動化・集約するために作成されました！\n\nアプリのリソースはCSR2およびNaturalMotion => Zynga => Take-Two Interactiveの所有物です。コミュニティ向けの参照情報表示のみを目的としています。",
-        "Time": "時間",
-        "To continue using the application you must agree to the terms the user agreement": "利用を続けるには利用規約に同意してください",
-        "Total needed:": "必要数：",
-        "UNRESTORED": "未修復",
-        "UPGRADE DETAILED INFO": "アップグレード詳細情報",
-        "Updating the database...": "データベースを更新中...",
-        "Very Low|Low|Medium|High|Very High|Ultra": "非常に低い|低い|中|高い|非常に高い|ウルトラ",
-        "WELCOME!": "ようこそ！",
-        "WORLD RECORDS": "世界記録",
-        "WR CAR RATING": "WR車両評価",
-        "You can add important cars to favorites": "重要な車をお気に入りに追加可能",
-        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "メーカーや車種グループから車を検索可能。お気に入り機能も！",
-        "You can go straight to the AUTOSHOW, just click on the car!": "車をクリックすればオートショーに直行！",
-        "You can mark the cars you owned": "所有済み車両をマーク可能",
-        "You can see the best tuning settings here": "ベストチューニング設定をここで確認",
-        "You can see the visual specs here": "ビジュアルスペックをここで確認",
-        "You could have won this car in the following seasons:": "この車は以下のシーズンで獲得可能でした：",
-        "text coming soon...": "近日公開..."
-    }
-}
+{"TranslationsData":{" (elite max)":"（エリートMAX）"," (unrestored)":"（未修復）"," records":" レコード"," sec":" 秒","...":"...","<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE":"<color=orange>【注意】</color> - 大容量ダウンロード","ABOUT":"概要","ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com":"ABS - インフラストラクチャーおよびビルドアプリケーション\nNitro4CSR - リソース管理とコミュニティデータ統合\nFREYCKSSON - リソース更新\nTheMaintainers - コミュニティデータの作成と更新\n\n発行元: ムRimgine Entertainment\n\n連絡先メール: csr2hub.service@gmail.com","AUDIO":"オーディオ","AUTOSHOW":"オートショー","AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)":"オートショー<color=#FFD540>PRO</color>モード（技術情報）","Agree":"同意する","All the best races of the racers are here! Let's see this hall of fame":"最高のレーサーたちのレースがここに！殿堂を見てみよう！","And finally, click to see additional information about the car":"最後に、車の詳細情報を見るにはクリックしてください","Avatar":"アバター","BACK":"戻る","BEST DRIVER!":"ベストドライバー！","BEST:":"ベスト：","BOSS CAR":"ボスカー","Basic specs and the car rating of the tier":"基本スペックとティア別の車両評価","Best result and racer. Click to watch the best shift video!":"ベスト結果とレーサー。ベストシフト動画を見るにはクリック！","Boss time: ":"ボスタイム：","CAR INFO (from Vision spreadsheet)":"車両情報（ビジョンスプレッドシート）","CONFIRM CHANGES":"変更を確定","CONNECTION FAILED":"接続失敗","CREATORS":"クリエイター","CREDITS":"クレジット","CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download":"CSR<color=yellow>2</color>-HUBはデータのダウンロードが必要です：<color= #FFAA0D>{0}</color>。通信制限がないことを確認し、ダウンロードを承認してください","Car name":"車名","Check out the cost of each part, and the effects of Stage 6 upgrades":"各パーツのコストとステージ6アップグレードの効果を確認！","City camera speed":"都市カメラ速度","Click here to change the leaderboard!":"リーダーボードを変更するにはここをクリック！","Click to change the car type!":"車種を変更するにはクリック！","DYNO:":"ダイノ：","Download failed, check your internet connection and restart the app":"ダウンロード失敗。接続を確認し、アプリを再起動してください","Driver":"ドライバー","ELITE MAX":"エリートMAX","ELITE STOCK":"エリートストック","EXIT":"終了","Effects volume":"効果音音量","Enable localisation":"ローカライズを有効化","FAVORITEs":"お気に入り","FINAL DRIVE":"ファイナルドライブ","FPS limiter":"FPSリミッター","Finally we can see the fastest players and their cars. Come with me, I'll show you!":"最速プレイヤーとその車両を確認できます！一緒に見に行きましょう！","Find out how many elite components you need to fully upgrade your car!":"車を完全に強化するためのエリートコンポーネント数を確認！","GRAPHICS":"グラフィックス","Gacha imports":"ガチャ輸入","Get update!":"更新を取得！","Get updated information on how many Legends components you need to restore your car!":"車を修復するためのレジェンドコンポーネント数を最新情報で確認！","Graphics quality":"グラフィック品質","I know it already":"既に知っています","In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again":"正常動作のため追加データが必要です。接続を確認し再試行してください","Initializing database...":"データベースを初期化中...","LOADING SCREEN":"ローディング画面","Let's choose the unrestored version":"未修復バージョンを選択","Let's go!":"レッツゴー！","Let's look at LEGENDS":"レジェンドを見よう","Let's look at this car":"この車を見てみよう","MILESTONE SEASON CAR":"マイルストーンシーズンカー","Music clip":"音楽クリップ","Music volume":"音楽音量","NEW":"新着","NITROUS OXIDE":"亜酸化窒素","Number of upgrades and fusion parts":"アップグレード数と融合パーツ","OFF":"オフ","ON":"オン","OPEN CONFIGURATOR":"コンフィギュレーターを開く","OTHERS":"その他","Petrol or electric car":"ガソリン車または電気自動車","Preparing the city...":"都市を準備中...","Price of full car upgrades":"車両完全アップグレード費用","Price of the car:":"車両価格：","Quit":"終了","RARE IMPORTS":"レア輸入車","RELEASE iNFO":"リリース情報","Rarity":"レアリティ","Records":"記録","Reset":"リセット","Restart":"再起動","SEASON CARS":"シーズンカー","SETTINGS":"設定","Save":"保存","Some settings have been changed, save changes?":"設定が変更されました。保存しますか？","Start":"開始","TIRE PRESSURE":"タイヤ圧","There's finally an AUTOSHOW in the city, let me show you around?":"ついに都市にオートショーが登場！案内しましょうか？","This car can be obtained by defeating the boss":"この車はボスを倒すと入手可能","This car cannot be obtained anywhere":"この車はどこでも入手不可","This car is a part of a collection and can be purchased with collection credits.":"この車はコレクションの一部で、コレクションクレジットで購入可能","This is the AUTOSHOW - information about all the cars are collected here! Let's see":"こちらがオートショー！全車両の情報が集結！見てみよう","This is the podium, the best cars and drivers show off here":"こちらが表彰台。最高の車とドライバーがここに集結","This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.":"このプロジェクトはゲーム情報を自動化・集約するために作成されました！\n\nアプリのリソースはCSR2およびNaturalMotion => Zynga => Take-Two Interactiveの所有物です。コミュニティ向けの参照情報表示のみを目的としています。","Time":"時間","To continue using the application you must agree to the user agreement terms.":"利用を続けるには利用規約に同意してください","Total needed:":"必要数：","UNRESTORED":"未修復","UPGRADE DETAILED INFO":"アップグレード詳細情報","Updating the database...":"データベースを更新中...","Very Low|Low|Medium|High|Very High|Ultra":"非常に低い|低い|中|高い|非常に高い|ウルトラ","WELCOME!":"ようこそ！","WORLD RECORDS":"世界記録","WR CAR RATING":"WR車両評価","You can add important cars to favorites":"重要な車をお気に入りに追加可能","You can find the car you need by manufacturers or car groups. There is even a favorites section!":"メーカーや車種グループから車を検索可能。お気に入り機能も！","You can go straight to the AUTOSHOW, just click on the car!":"車をクリックすればオートショーに直行！","You can mark the cars you owned":"所有済み車両をマーク可能","You can see the best tuning settings here":"ベストチューニング設定をここで確認","You can see the visual specs here":"ビジュアルスペックをここで確認","You could have won this car in the following seasons:":"この車は以下のシーズンで獲得可能でした：","text coming soon...":"近日公開..."}}
