--- a/Localisation/FR.json
+++ b/Localisation/FR.json
@@ -1,115 +1,1 @@
-{
-    "TranslationsData": {
-        " (elite max)": " (élite max)",
-        " (unrestored)": " (non restauré)",
-        " records": " records",
-        " sec": " sec",
-        "...": "...",
-        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<couleur=orange>【ATTENTION】</couleur> - TAILLE DE TÉLÉCHARGEMENT IMPORTANTE",
-        "ABOUT": "À PROPOS",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastructure et application de construction\nNitro4CSR - Gestion des ressources et intégration des données communautaires\nFREYCKSSON - Mise à jour des ressources\nMAINTAINERS - Création et mise à jour des données communautaires\n\nÉditeur : ムRimgine Entertainment\n\nE-mail : csr2hub.service@gmail.com",
-        "AUDIO": "AUDIO",
-        "AUTOSHOW": "SALON DE L'AUTO",
-        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Mode <couleur=#FFD540>PRO</couleur> du SALON DE L'AUTO (informations techniques)",
-        "Agree": "Accepter",
-        "All the best races of the racers are here! Let's see this hall of fame": "Toutes les meilleures courses des pilotes sont ici ! Voyons ce temple de la renommée.",
-        "And finally, click to see additional information about the car": "Enfin, cliquez pour voir des informations supplémentaires sur la voiture",
-        "Avatar": "Avatar",
-        "BACK": "RETOUR",
-        "BEST DRIVER!": "MEILLEUR PILOTE !",
-        "BEST:": "MEILLEUR :",
-        "BOSS CAR": "VOITURE DE BOSS",
-        "Basic specs and the car rating of the tier": "Spécifications de base et classement de la voiture pour ce niveau",
-        "Best result and racer. Click to watch the best shift video!": "Meilleur résultat et pilote. Cliquez pour voir la vidéo du meilleur passage !",
-        "Boss time: ": "Temps du boss : ",
-        "CAR INFO (from Vision spreadsheet)": "INFOS VOITURE (visualisation)",
-        "CONFIRM CHANGES": "CONFIRMER LES MODIFICATIONS",
-        "CONNECTION FAILED": "ÉCHEC DE CONNEXION",
-        "CREATORS": "CRÉATEURS",
-        "CREDITS": "CRÉDITS",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<couleur=yellow>2</couleur>-HUB doit télécharger des données : <couleur= #FFAA0D>{0}</couleur>. Vérifiez que vous n'utilisez pas un réseau limité, puis confirmez le téléchargement.",
-        "Car name": "Nom de la voiture",
-        "Check out the cost of each part, and the effects of Stage 6 upgrades": "Découvrez le coût de chaque pièce et les effets des améliorations de niveau 6 !",
-        "City camera speed": "Vitesse de la caméra en ville",
-        "Click here to change the leaderboard!": "Cliquez ici pour modifier le classement !",
-        "Click to change car type!": "Cliquez pour changer le type de voiture !",
-        "DYNO:": "DYNO :",
-        "Download failed, check your internet connection and restart the app": "Échec du téléchargement. Vérifiez votre connexion Internet et redémarrez l'appli.",
-        "Driver": "Pilote",
-        "ELITE MAX": "ÉLITE MAX",
-        "ELITE STOCK": "ÉLITE DE BASE",
-        "EXIT": "QUITTER",
-        "Effects volume": "Volume des effets",
-        "Enable localisation": "Activer la localisation",
-        "FAVORITEs": "FAVORIS",
-        "FINAL DRIVE": "TRANSMISSION FINALE",
-        "FPS limiter": "Limiteur de FPS",
-        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Enfin, nous pouvons voir les joueurs les plus rapides et leurs voitures. Suivez-moi !",
-        "Find out how many elite components you need to fully upgrade your car!": "Découvrez combien de composants élite sont nécessaires pour améliorer entièrement votre voiture !",
-        "GRAPHICS": "GRAPHISMES",
-        "Gacha imports": "Importations Gacha",
-        "Get update!": "Mettre à jour !",
-        "Get updated information on how many Legends components you need to restore your car!": "Obtenez des informations à jour sur les composants Legends nécessaires pour restaurer votre voiture !",
-        "Graphics quality": "Qualité graphique",
-        "I know it already": "Je le sais déjà",
-        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Pour fonctionner correctement, l'application nécessite des données supplémentaires. Vérifiez votre connexion Internet et réessayez.",
-        "Initializing database...": "Initialisation de la base de données...",
-        "LOADING SCREEN": "ÉCRAN DE CHARGEMENT",
-        "Let's choose the unrestored version": "Choisissons la version non restaurée",
-        "Let's go!": "Allons-y !",
-        "Let's look at LEGENDS": "Regardons les LÉGENDES",
-        "Let's look at this car": "Examinons cette voiture",
-        "MILESTONE SEASON CAR": "VOITURE PHARE DE LA SAISON",
-        "Music clip": "Clip musical",
-        "Music volume": "Volume de la musique",
-        "NEW": "NOUVEAU",
-        "NITROUS OXIDE": "PROTOXYDE D'AZOTE",
-        "Number of upgrades and fusion parts": "Nombre d'améliorations et de pièces de fusion",
-        "OFF": "DÉSACTIVÉ",
-        "ON": "ACTIVÉ",
-        "OPEN CONFIGURATOR": "OUVRIR LE CONFIGURATEUR",
-        "OTHERS": "AUTRES",
-        "Petrol or electric car": "Voiture essence ou électrique",
-        "Preparing the city...": "Préparation de la ville...",
-        "Price of full car upgrades": "Prix des améliorations complètes",
-        "Price of the car:": "Prix de la voiture :",
-        "Quit": "Quitter",
-        "RARE IMPORTS": "IMPORTATIONS RARES",
-        "RELEASE iNFO": "INFOS DE LA VERSION",
-        "Rarity": "Rareté",
-        "Records": "Records",
-        "Reset": "Réinitialiser",
-        "Restart": "Redémarrer",
-        "SEASON CARS": "VOITURES DE SAISON",
-        "SETTINGS": "PARAMÈTRES",
-        "Save": "Sauvegarder",
-        "Some settings have been changed, save changes?": "Certains paramètres ont été modifiés. Sauvegarder ?",
-        "Start": "Commencer",
-        "TIRE PRESSURE": "PRESSION DES PNEUS",
-        "There's finally an AUTOSHOW in the city, let me show you around?": "Il y a enfin un SALON DE L'AUTO en ville. Je vous le fais visiter ?",
-        "This car can be obtained by defeating the boss": "Cette voiture s'obtient en battant le boss",
-        "This car cannot be obtained anywhere": "Cette voiture n'est disponible nulle part",
-        "This car is a part of a collection and can be purchased with collection credits.": "Cette voiture fait partie d'une collection et peut être achetée avec des crédits de collection.",
-        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Voici le SALON DE L'AUTO : toutes les infos sur les voitures sont ici ! Voyons cela.",
-        "This is the podium, the best cars and drivers show off here": "Voici le podium, où les meilleures voitures et pilotes se présentent.",
-        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Ce projet a été créé pour automatiser et centraliser les informations du jeu !\n\nPresque toutes les ressources de l'appli appartiennent à CSR2 et sont la propriété de NaturalMotion => Zynga => Take-Two Interactive. Elles servent uniquement à afficher des informations de référence pour la communauté.",
-        "Time": "Temps",
-        "To continue using the application you must agree to the terms the user agreement": "Pour continuer, vous devez accepter les conditions d'utilisation.",
-        "Total needed:": "Total nécessaire :",
-        "UNRESTORED": "NON RESTAURÉ",
-        "UPGRADE DETAILED INFO": "DÉTAILS DES AMÉLIORATIONS",
-        "Updating the database...": "Mise à jour de la base de données...",
-        "Very Low|Low|Medium|High|Very High|Ultra": "Très bas|Bas|Moyen|Élevé|Très élevé|Ultra",
-        "WELCOME!": "BIENVENUE !",
-        "WORLD RECORDS": "RECORDS DU MONDE",
-        "WR CAR RATING": "CLASSEMENT DES VOITURES (RECORDS)",
-        "You can add important cars to favorites": "Vous pouvez ajouter des voitures importantes aux favoris",
-        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Recherchez des voitures par marque ou groupe. Il y a même une section favoris !",
-        "You can go straight to the AUTOSHOW, just click on the car!": "Accédez directement au SALON DE L'AUTO en cliquant sur une voiture !",
-        "You can mark the cars you owned": "Marquez les voitures que vous possédez",
-        "You can see the best tuning settings here": "Retrouvez ici les meilleurs réglages !",
-        "You can see the visual specs here": "Consultez les spécifications visuelles ici",
-        "You could have won this car in the following seasons:": "Vous auriez pu gagner cette voiture lors des saisons suivantes :",
-        "text coming soon...": "texte à venir..."
-    }
-}
+{"TranslationsData":{" (elite max)":" (élite max)"," (unrestored)":" (non restauré)"," records":" records"," sec":" sec","...":"...","<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE":"<couleur=orange>【ATTENTION】</couleur> - TAILLE DE TÉLÉCHARGEMENT IMPORTANTE","ABOUT":"À PROPOS","ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com":"ABS - Infrastructure et application de construction\nNitro4CSR - Gestion des ressources et intégration des données communautaires\nFREYCKSSON - Mise à jour des ressources\nTheMaintainers - Création et mise à jour des données communautaires\n\nÉditeur : ムRimgine Entertainment\n\nE-mail : csr2hub.service@gmail.com","AUDIO":"AUDIO","AUTOSHOW":"SALON DE L'AUTO","AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)":"Mode <couleur=#FFD540>PRO</couleur> du SALON DE L'AUTO (informations techniques)","Agree":"Accepter","All the best races of the racers are here! Let's see this hall of fame":"Toutes les meilleures courses des pilotes sont ici ! Voyons ce temple de la renommée.","And finally, click to see additional information about the car":"Enfin, cliquez pour voir des informations supplémentaires sur la voiture","Avatar":"Avatar","BACK":"RETOUR","BEST DRIVER!":"MEILLEUR PILOTE !","BEST:":"MEILLEUR :","BOSS CAR":"VOITURE DE BOSS","Basic specs and the car rating of the tier":"Spécifications de base et classement de la voiture pour ce niveau","Best result and racer. Click to watch the best shift video!":"Meilleur résultat et pilote. Cliquez pour voir la vidéo du meilleur passage !","Boss time: ":"Temps du boss : ","CAR INFO (from Vision spreadsheet)":"INFOS VOITURE (visualisation)","CONFIRM CHANGES":"CONFIRMER LES MODIFICATIONS","CONNECTION FAILED":"ÉCHEC DE CONNEXION","CREATORS":"CRÉATEURS","CREDITS":"CRÉDITS","CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download":"CSR<couleur=yellow>2</couleur>-HUB doit télécharger des données : <couleur= #FFAA0D>{0}</couleur>. Vérifiez que vous n'utilisez pas un réseau limité, puis confirmez le téléchargement.","Car name":"Nom de la voiture","Check out the cost of each part, and the effects of Stage 6 upgrades":"Découvrez le coût de chaque pièce et les effets des améliorations de niveau 6 !","City camera speed":"Vitesse de la caméra en ville","Click here to change the leaderboard!":"Cliquez ici pour modifier le classement !","Click to change the car type!":"Cliquez pour changer le type de voiture !","DYNO:":"DYNO :","Download failed, check your internet connection and restart the app":"Échec du téléchargement. Vérifiez votre connexion Internet et redémarrez l'appli.","Driver":"Pilote","ELITE MAX":"ÉLITE MAX","ELITE STOCK":"ÉLITE DE BASE","EXIT":"QUITTER","Effects volume":"Volume des effets","Enable localisation":"Activer la localisation","FAVORITEs":"FAVORIS","FINAL DRIVE":"TRANSMISSION FINALE","FPS limiter":"Limiteur de FPS","Finally we can see the fastest players and their cars. Come with me, I'll show you!":"Enfin, nous pouvons voir les joueurs les plus rapides et leurs voitures. Suivez-moi !","Find out how many elite components you need to fully upgrade your car!":"Découvrez combien de composants élite sont nécessaires pour améliorer entièrement votre voiture !","GRAPHICS":"GRAPHISMES","Gacha imports":"Importations Gacha","Get update!":"Mettre à jour !","Get updated information on how many Legends components you need to restore your car!":"Obtenez des informations à jour sur les composants Legends nécessaires pour restaurer votre voiture !","Graphics quality":"Qualité graphique","I know it already":"Je le sais déjà","In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again":"Pour fonctionner correctement, l'application nécessite des données supplémentaires. Vérifiez votre connexion Internet et réessayez.","Initializing database...":"Initialisation de la base de données...","LOADING SCREEN":"ÉCRAN DE CHARGEMENT","Let's choose the unrestored version":"Choisissons la version non restaurée","Let's go!":"Allons-y !","Let's look at LEGENDS":"Regardons les LÉGENDES","Let's look at this car":"Examinons cette voiture","MILESTONE SEASON CAR":"VOITURE PHARE DE LA SAISON","Music clip":"Clip musical","Music volume":"Volume de la musique","NEW":"NOUVEAU","NITROUS OXIDE":"PROTOXYDE D'AZOTE","Number of upgrades and fusion parts":"Nombre d'améliorations et de pièces de fusion","OFF":"DÉSACTIVÉ","ON":"ACTIVÉ","OPEN CONFIGURATOR":"OUVRIR LE CONFIGURATEUR","OTHERS":"AUTRES","Petrol or electric car":"Voiture essence ou électrique","Preparing the city...":"Préparation de la ville...","Price of full car upgrades":"Prix des améliorations complètes","Price of the car:":"Prix de la voiture :","Quit":"Quitter","RARE IMPORTS":"IMPORTATIONS RARES","RELEASE iNFO":"INFOS DE LA VERSION","Rarity":"Rareté","Records":"Records","Reset":"Réinitialiser","Restart":"Redémarrer","SEASON CARS":"VOITURES DE SAISON","SETTINGS":"PARAMÈTRES","Save":"Sauvegarder","Some settings have been changed, save changes?":"Certains paramètres ont été modifiés. Sauvegarder ?","Start":"Commencer","TIRE PRESSURE":"PRESSION DES PNEUS","There's finally an AUTOSHOW in the city, let me show you around?":"Il y a enfin un SALON DE L'AUTO en ville. Je vous le fais visiter ?","This car can be obtained by defeating the boss":"Cette voiture s'obtient en battant le boss","This car cannot be obtained anywhere":"Cette voiture n'est disponible nulle part","This car is a part of a collection and can be purchased with collection credits.":"Cette voiture fait partie d'une collection et peut être achetée avec des crédits de collection.","This is the AUTOSHOW - information about all the cars are collected here! Let's see":"Voici le SALON DE L'AUTO : toutes les infos sur les voitures sont ici ! Voyons cela.","This is the podium, the best cars and drivers show off here":"Voici le podium, où les meilleures voitures et pilotes se présentent.","This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.":"Ce projet a été créé pour automatiser et centraliser les informations du jeu !\n\nPresque toutes les ressources de l'appli appartiennent à CSR2 et sont la propriété de NaturalMotion => Zynga => Take-Two Interactive. Elles servent uniquement à afficher des informations de référence pour la communauté.","Time":"Temps","To continue using the application you must agree to the user agreement terms.":"Pour continuer, vous devez accepter les conditions d'utilisation.","Total needed:":"Total nécessaire :","UNRESTORED":"NON RESTAURÉ","UPGRADE DETAILED INFO":"DÉTAILS DES AMÉLIORATIONS","Updating the database...":"Mise à jour de la base de données...","Very Low|Low|Medium|High|Very High|Ultra":"Très bas|Bas|Moyen|Élevé|Très élevé|Ultra","WELCOME!":"BIENVENUE !","WORLD RECORDS":"RECORDS DU MONDE","WR CAR RATING":"CLASSEMENT DES VOITURES (RECORDS)","You can add important cars to favorites":"Vous pouvez ajouter des voitures importantes aux favoris","You can find the car you need by manufacturers or car groups. There is even a favorites section!":"Recherchez des voitures par marque ou groupe. Il y a même une section favoris !","You can go straight to the AUTOSHOW, just click on the car!":"Accédez directement au SALON DE L'AUTO en cliquant sur une voiture !","You can mark the cars you owned":"Marquez les voitures que vous possédez","You can see the best tuning settings here":"Retrouvez ici les meilleurs réglages !","You can see the visual specs here":"Consultez les spécifications visuelles ici","You could have won this car in the following seasons:":"Vous auriez pu gagner cette voiture lors des saisons suivantes :","text coming soon...":"texte à venir..."}}
